// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel Tests Correct styles for danger panel | Dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #e4585a;
  color: #DDDDDD;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #e4585a;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #e4585a;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #e4585a;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #9fb3c8;
  border: solid 1px #9fb3c8;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #7f99b5;
  background-color: #9fb3c8;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #dd2c2e;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #b81e1f;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
   
</div>
`;

exports[`Panel Tests Correct styles for danger panel 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #dd2c2e;
  color: #444444;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #dd2c2e;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #dd2c2e;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #dd2c2e;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #999999;
  border: solid 1px #999999;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #808080;
  background-color: #999999;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #dd2c2e;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #b81e1f;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel Tests Correct styles for info panel | Dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #2f83cf;
  color: #DDDDDD;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #2f83cf;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #abcdec;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #2f83cf;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #9fb3c8;
  border: solid 1px #9fb3c8;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #7f99b5;
  background-color: #9fb3c8;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #2f83cf;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #2669a5;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
   
</div>
`;

exports[`Panel Tests Correct styles for info panel 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #2f83cf;
  color: #444444;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #2f83cf;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #2f83cf;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #2f83cf;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #999999;
  border: solid 1px #999999;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #808080;
  background-color: #999999;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #2f83cf;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #2669a5;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel Tests Correct styles for success panel | Dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #00b76b;
  color: #DDDDDD;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #00b76b;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #00ea89;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #00b76b;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #9fb3c8;
  border: solid 1px #9fb3c8;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #7f99b5;
  background-color: #9fb3c8;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #00b76b;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #00844d;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel Tests Correct styles for success panel 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #00b76b;
  color: #444444;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #00b76b;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #00b76b;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #00b76b;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #999999;
  border: solid 1px #999999;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #808080;
  background-color: #999999;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #00b76b;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #00844d;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel Tests Correct styles for warning panel | Dark mode 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #eba300;
  color: #DDDDDD;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #eba300;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #ffba1f;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #eba300;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #9fb3c8;
  border: solid 1px #9fb3c8;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #7f99b5;
  background-color: #9fb3c8;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #eba300;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #b88000;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
   
</div>
`;

exports[`Panel Tests Correct styles for warning panel 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #fff;
  border: solid 1px #eba300;
  color: #444444;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #eba300;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #eba300;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #eba300;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #999999;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #666666;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #999999;
  border: solid 1px #999999;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #808080;
  background-color: #999999;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #eba300;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #b88000;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel Tests Setting the title prop sets the title 1`] = `
.c0 {
  border-radius: 5px;
  background-color: #243b53;
  border: solid 1px #627d98;
  color: #DDDDDD;
  box-shadow: 0 0 5px rgba(0,0,0,0.25);
  height: calc(100vh - 50px);
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  z-index: 99;
  position: fixed;
  top: 25px;
  right: 25px;
  -webkit-animation: bouncein 0.5s ease-in-out;
  animation: bouncein 0.5s ease-in-out;
}

.c1 {
  border-bottom: solid 1px #627d98;
  padding: 10px;
  box-sizing: border-box;
  margin: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  color: #DDDDDD;
}

.c4 {
  padding: 20px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: auto;
}

.c4 p:first-of-type {
  margin-top: 0;
}

.c5 {
  border-top: solid 1px #627d98;
  padding: 10px;
  box-sizing: border-box;
  text-align: right;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 button {
  display: inline-block;
}

.c5 button:last-child {
  margin-left: 10px;
}

.c2 {
  right: 10px;
  top: 10px;
  border: none;
  background-color: transparent;
  font-size: 1rem;
  font-weight: bold;
  color: #627d98;
  position: absolute;
  cursor: pointer;
}

.c2:hover {
  color: #4e6479;
}

.c2 svg {
  width: 16px;
}

.c6 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: transparent;
  color: #9fb3c8;
  border: solid 1px #9fb3c8;
}

.c6:hover:not(:disabled) {
  color: #fff;
  border-color: #7f99b5;
  background-color: #9fb3c8;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c6:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c6:disabled {
  border-color: #999999;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c6:disabled .sc-Axmtr {
  background-color: #999999;
}

.c7 {
  vertical-align: middle;
  padding: 0 10px;
  box-sizing: border-box;
  height: 34px;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 5px;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  background-color: #4799ff;
  color: #F3F3F3;
  border: none;
}

.c7:hover:not(:disabled) {
  background-color: #147dff;
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c7:active:not(:disabled) {
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

.c7:disabled {
  background-color: #DDDDDD;
  color: #999999;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

.c3 {
  width: 1em;
  height: 1em;
}

<div>
  <div
    class="c0"
    role="dialog"
  >
    <h3
      class="c1"
    >
      Title
      <button
        aria-label="Close"
        class="c2"
        title="Close panel"
      >
        <svg
          class="c3  times"
          clip-rule="evenodd"
          fill-rule="evenodd"
          role="img"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 18.343L42.343 0 48 5.657 29.657 24 48 42.343 42.343 48 24 29.657 5.657 48 0 42.343 18.343 24 0 5.657 5.657 0 24 18.343z"
            fill="currentColor"
          />
        </svg>
      </button>
    </h3>
    <div
      class="c4"
    >
      <div
        class=""
      >
        Panel
      </div>
    </div>
    <div
      class="c5"
    >
      <button
        class="c6"
      >
        Close
      </button>
      <button
        class="c7"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;
